[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "correction-helper"
description = "Some helpers to help writing correction bots, use by hackinscience.org."
authors = [{name = "Julien Palard", email = "julien@palard.fr"}]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.7"
dependencies = [
    "friendly-traceback>=0.4.87",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
Homepage = "https://github.com/JulienPalard/correction-helper"

[tool.setuptools]
py-modules = ["correction_helper"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "correction_helper.__version__"}

[tool.black]
