[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "correction-helper"
description = "Some helpers to help writing correction bots, use by hackinscience.org."
authors = [{name = "Julien Palard", email = "julien@palard.fr"}]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.7"
dependencies = [
    "friendly-traceback>=0.4.87",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
Homepage = "https://github.com/JulienPalard/correction-helper"

[tool.setuptools]
py-modules = ["correction_helper"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "correction_helper.__version__"}

[tool.black]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "mypy", "black", "pydocstyle", "pylint", "isort"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest", "hypothesis"]
commands = [["pytest"]]

[tool.tox.env.mypy]
deps = ["mypy"]
commands = [["mypy", "--ignore-missing-imports", "correction_helper.py"]]

[tool.tox.env.black]
deps = ["black"]
commands = [["black", "--check", "--diff", "correction_helper.py"]]

[tool.tox.env.pylint]
deps = ["pylint"]
commands = [["pylint", "correction_helper.py"]]

[tool.tox.env.pydocstyle]
deps = ["pydocstyle"]
commands = [["pydocstyle", "correction_helper.py"]]

[tool.tox.env.isort]
deps = ["isort"]
commands = [["isort", "--check", "--profile=black", "correction_helper.py"]]
