[build-system]
requires = ["setuptools>=61.2", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "correction-helper"
description = "Some helpers to help writing correction bots, use by hackinscience.org."
authors = [{name = "Julien Palard", email = "julien@palard.fr"}]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.7"
dependencies = [
    "friendly-traceback>=0.4.87",
    "forking>=0.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
Homepage = "https://github.com/JulienPalard/correction-helper"

[tool.setuptools]
py-modules = ["correction_helper"]
include-package-data = false

[tool.isort]
profile = "black"

[tool.black]

[tool.tox]
envlist = ["py313", "py314", "mypy", "black", "pydocstyle", "pylint", "isort"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest", "hypothesis"]
commands = [["pytest"]]

[tool.tox.env.mypy]
deps = ["mypy"]
commands = [["mypy", "--ignore-missing-imports", "correction_helper.py"]]

[tool.tox.env.black]
deps = ["black"]
commands = [["black", "--check", "--diff", "correction_helper.py"]]

[tool.tox.env.pylint]
deps = ["pylint"]
commands = [["pylint", "correction_helper.py"]]

[tool.tox.env.pydocstyle]
deps = ["pydocstyle"]
commands = [["pydocstyle", "correction_helper.py"]]

[tool.tox.env.isort]
deps = ["isort"]
commands = [["isort", "--check", "correction_helper.py"]]
