[metadata]
name = correction-helper
# Format is YYYY.MM.DD (https://calver.org/)
version = 2020.12.12
description = Some helpers to help writing correction bots, use by hackinscience.org.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/correction-helper
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
py_modules =
  correction_helper
python_requires = >= 3.6
install_requires =
  friendly-traceback>0.2.15
